--- a/app/src/main/res/layout/fragment_content_play_main.xml
+++ b/app/src/main/res/layout/fragment_content_play_main.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/content_main_fragment_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#151515">
+        android:background="#424242"
+        tools:context=".ui.main.view.fragments.ContentPlayMainFragment">
 
         <TextView
             android:id="@+id/tv_fragment_header"
