--- a/app/src/main/res/layout/card_movies_item.xml
+++ b/app/src/main/res/layout/card_movies_item.xml
@@ -2,23 +2,33 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+
+        <variable
+            name="contentPlayModel"
+            type="com.example.contentplay.data.model.MoviesModelAPI" />
+
+    </data>
+
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#131314"
-    android:padding="10dp">
+    android:layout_margin="5dp">
 
     <ImageView
         android:id="@+id/movie_image"
         android:layout_width="120dp"
         android:layout_height="70dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
+        android:id="@+id/movie_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Movies Name"
+        android:text="@{contentPlayModel.movieName}"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textFontWeight="600"
@@ -26,6 +36,22 @@
         app:layout_constraintStart_toEndOf="@id/movie_image"
         app:layout_constraintTop_toTopOf="@id/movie_image"
         app:layout_constraintBottom_toBottomOf="@id/movie_image"/>
+
+    <TextView
+        android:id="@+id/movie_desc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@{contentPlayModel.movieDescription}"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:textFontWeight="600"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/movie_image" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
