--- a/app/src/main/res/layout/fragment_content_play_main.xml
+++ b/app/src/main/res/layout/fragment_content_play_main.xml
@@ -23,12 +23,54 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
+        <TextView
+            android:id="@+id/tv_add_data"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add"
+            android:padding="10dp"
+            android:textSize="16sp"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textColor="#00FF00"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_fragment_header"
+            app:layout_constraintEnd_toStartOf="@id/tv_update_data"/>
+
+        <TextView
+            android:id="@+id/tv_update_data"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Update"
+            android:padding="10dp"
+            android:textSize="16sp"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textColor="#0000FF"
+            app:layout_constraintStart_toEndOf="@id/tv_add_data"
+            app:layout_constraintTop_toBottomOf="@id/tv_fragment_header"
+            app:layout_constraintEnd_toStartOf="@id/tv_delete_data"/>
+
+        <TextView
+            android:id="@+id/tv_delete_data"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Delete"
+            android:padding="10dp"
+            android:textSize="16sp"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textColor="#FF0000"
+            app:layout_constraintStart_toEndOf="@id/tv_update_data"
+            app:layout_constraintTop_toBottomOf="@id/tv_fragment_header"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_content_listing"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="5dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_fragment_header"
+            app:layout_constraintTop_toBottomOf="@id/tv_add_data"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
